Fixed: - Finished adding notes to video events timeline - issue with copy menu not showing firefox - issue with showing and hiding quiz inclass - issue with css in in class preview for firefox

--- a/app/styles/controls.css
+++ b/app/styles/controls.css
@@ -80,6 +80,20 @@
     background-size:20px 20px;
 }
 
+.notesDiv{
+    position:absolute;
+    width:30px;
+    height:24px;
+    cursor:pointer;
+    /*top:50%;
+    left:50%;*/
+    margin-top:-50px;
+    right:140px;
+    bottom: 0px;
+    background:url('/images/note.png') no-repeat center center;
+    background-size:20px 20px;
+}
+
 .shortcutDiv{
     position:absolute;
     width:30px;
